fix for bottom row zoomed in on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,9 @@ body {
     overflow: hidden;
     position: relative;
     width: 100%;
-    height: 100vh;
+    
+    /* MOBILE ISSUE (described here):https://chanind.github.io/javascript/2019/09/28/avoid-100vh-on-mobile-web.html */
+    /* height: 100vh; */ 
 }
 
 .desktop-background {
